# the-watchers-rust

./: .gitignore  CLAUDE.md  Cargo.toml  METHOD.md  STYLE.md  clippy.toml  main.rs  roadmap.txt  run.ps1  rustfmt.toml  test.ps1  the-watchers-rust.code-workspace
docs/adrqtcc/: 0001-identity-by-entityid.md  0002-events-mutate-through-the-field-alone.md  README.md  TEMPLATE.md
docs/ideologues/: the-lens-and-the-deepening.md  the-liminal-fade.md
docs/lore/: README.md  cronus-kept-his-teeth.md  mnemosyne-and-lethe.md  the-four-pillars.md  titans-the-faded-pantheon.md
docs/tests/: README.md  content-authors.md  contributors.md  reviewers.md
examples/: light_demo.rs  polygons.rs
res/: log.txt  ray_act.txt  ray_log.txt  vec_log.txt
res/entities/: being.being  ooloonoo.being  oolooroo.being  poly.poly  vesh.being
res/logs/: log  log.txt  near.txt.txt  screen.txt
scripts/: _catalog.ps1  tests-content.ps1  tests-contributors.ps1  tests-reviewers.ps1
src/: lib.rs  main.rs  todo.txt
src/game/: buffer.rs  entity.rs  fairy.rs  game.rs  group.rs  haps.rs  item.rs  mod.rs  npc.rs  player.rs  poly.rs  recollection.rs  rover.rs  vision.rs
src/game_loop/: game_loop_main.rs  mod.rs
src/gfx/: charset.rs  lamp.rs  light.rs  mod.rs  render.rs  screen.rs  ui.rs  viewport.rs  voxel.rs
src/input/: mod.rs
src/logic/: event.rs
src/looper/: looper.rs  mod.rs
src/loops/: main_loop.rs  mod.rs  player_loop.rs  ray_loop.rs  world_loop.rs
tests/: finish_line_worlds_end.rs  safety.rs  safety_being.rs  safety_haps.rs  safety_poly.rs
utility/: utils.rs
utils/: util.rs
(+93 files in other folders)
