[package]
name = "the-watchers-rust"
version = "0.3.0"
edition = "2021"

[dependencies]
angle-sc = "1.0.0"
chrono = "0.4.4"
micromath = "2.1.0"
noise = "0.9.0"
rand = "0.9.1"
ratatui = "0.29.0"
tokio = { version = "1.44.2", features = ["full"] }

[[bin]]
name = "the-watchers-rust"
path = "src/main.rs"
